--- a/styles.css
+++ b/styles.css
@@ -76,3 +76,18 @@ ul li:hover {
   cursor: pointer;
   border-radius: 0.3em;
 }
+
+p {
+  font-size: 0.5rem;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+}
