--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 * {
   font-size: 1rem;
   font-weight: bold;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Roboto Mono", monospace;
 }
 
 body {
@@ -46,7 +46,7 @@ input {
   width: 80%;
   padding: 13px 15px;
   border: none;
-  background-color: lightcoral;
+  background-color: rgb(162, 186, 244);
   color: white;
   border-radius: 0.6em;
   text-align: center;
@@ -59,26 +59,26 @@ input:focus {
 ul {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   padding: 0;
-  gap: 20px;
+  gap: 8px;
 }
 
 ul li {
   list-style-type: none;
   background-color: lightgreen;
-  padding: 1em 0.5em;
+  padding: 0.5em 0.5em;
+  border-radius: 1rem;
   flex-grow: 1;
+  font-size: 0.8rem;
 }
 
 ul li:hover {
   background-color: rgb(120, 240, 120);
   cursor: pointer;
-  border-radius: 0.3em;
 }
 
 p {
-  font-size: 0.5rem;
+  font-size: 0.7rem;
 }
 
 .footer {
